--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         <p style="font-weight: 500;">We focus on ergonomics and meeting you where you work. It's only a keystroke away. </p>
         <div class="d-lg-flex justify-content-between">
 
-          <div class="card" style="width: 25rem;">
+          <div class="card mt-3" style="width: 25rem;">
             <img src="img/card-img-2.png" class="card-img-top" alt="...">
             <div class="card-body p-4 shadow-sm">
               <h6>By <b>Wahid Ari</b> |  03 March 2019</h6>
@@ -229,7 +229,7 @@
             </div>
           </div>
 
-          <div class="card" style="width: 25rem;">
+          <div class="card mt-3" style="width: 25rem;">
             <img src="img/card-2.png" class="card-img-top" alt="...">
             <div class="card-body p-4 shadow-sm">
               <h6>By <b>Wahid Ari</b> |  03 March 2019</h6>
@@ -237,7 +237,7 @@
             </div>
           </div>
 
-          <div class="card" style="width: 25rem;">
+          <div class="card mt-3" style="width: 25rem;">
             <img src="img/card-3.png" class="card-img-top" alt="...">
             <div class="card-body p-4 shadow-sm">
               <h6>By <b>Wahid Ari</b> |  03 March 2019</h6>
