--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         <h1 style="font-weight: 700;">Price Table</h1>
         <h6 style="font-weight: 500;">We offer competitive price</h6>
 
-        <div class="d-lg-flex justify-content-between mt-4 price">
+        <div class="d-lg-flex justify-content-evenly mt-4 price">
 
           <div class="d-flex price-card ">
             <div class="card price-card-1" style="width: 18rem;">
