--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
             the two major realms of Classical physics: Newtonian mechanics </p>
         </div>
 
-        <div class="d-md-flex justify-content-between mt-5">
+        <div class="d-md-flex justify-content-evenly mt-5">
 
           <div class="d-flex flex-column shadow-sm p-4 review-card bg-white" style="border-radius: 10px; width: 327px;">
             <div>
